# cuda-efficient-features

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
modules/: CMakeLists.txt
modules/cuda_efficient_features/: CMakeLists.txt
modules/cuda_efficient_features/include/: cuda_efficient_descriptors.h  cuda_efficient_features.h
modules/cuda_efficient_features/src/: bad.p256.h  bad.p512.h  cuda_bad.cpp  cuda_bad.cu  cuda_bad_internal.h  cuda_efficient_descriptors.cpp  cuda_efficient_features.cpp  cuda_efficient_features.cu  cuda_efficient_features_internal.h  cuda_fast.cu  cuda_hash_sift.cpp  cuda_hash_sift.cu  cuda_hash_sift_internal.h  cuda_macro.h  device_buffer.cpp  device_buffer.h  hash_sift.p256.h
modules/efficient_features/: CMakeLists.txt
modules/efficient_features/include/: efficient_descriptors.h
modules/efficient_features/src/: bad.cpp  hash_sift.cpp  hash_sift.p512.h
samples/: CMakeLists.txt  hpatches_description.cpp  sample_benchmark.cpp  sample_common.cpp  sample_common.h  sample_feature_extraction.cpp  sample_feature_matching.cpp  sample_image_sequence.cpp
tests/: CMakeLists.txt  descriptor_test.cpp
